OAKHILL/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Id__c</fullName>
        <label>Mailer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Schedule_From__c</fullName>
        <label>Mailer Schedule From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Schedule_Minute__c</fullName>
        <label>Mailer Schedule Minute</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Schedule_Time__c</fullName>
        <label>Mailer Schedule Time</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Schedule_To__c</fullName>
        <label>Mailer Schedule To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailer Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Template__c</fullName>
        <label>Mailer Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Mailer_Time_Zone__c</fullName>
        <label>Mailer Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Repeat_Bounces__c</fullName>
        <label>Total Repeat Bounces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Repeat_Spamreports__c</fullName>
        <label>Total Repeat Spamreports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Repeat_Unsubscribes__c</fullName>
        <label>Total Repeat Unsubscribes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Spam_Drop__c</fullName>
        <label>Total Spam Drop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Blocks__c</fullName>
        <label>Total Blocks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Bounces__c</fullName>
        <label>Total Bounces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Clicks__c</fullName>
        <label>Total Clicks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Delivered__c</fullName>
        <label>Total Delivered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Invalid_Emails__c</fullName>
        <label>Total Invalid Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Opens__c</fullName>
        <label>Total Opens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Requests__c</fullName>
        <label>Total Requests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Spam_Reports__c</fullName>
        <label>Total Spam Reports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Total_Unsubscribes__c</fullName>
        <label>Total Unsubscribes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Unique_Clicks__c</fullName>
        <label>Total Unique Clicks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Unique_Opens__c</fullName>
        <label>Total Unique Opens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__mailer_subject__c</fullName>
        <label>Mailer subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>todays_month__c</fullName>
        <formula>if(Month(Today()) = 1, &quot;January&quot;, if(Month(Today()) = 2, &quot;February&quot;, if(Month(Today()) = 3, &quot;March&quot;, if(Month(Today()) = 4, &quot;April&quot;, if(Month(Today()) = 5, &quot;May&quot;, if(Month(Today()) = 6, &quot;June&quot;, if(Month(Today()) = 7, &quot;July&quot;, if(Month(Today()) = 8, &quot;August&quot;, if(Month(Today()) = 9, &quot;September&quot;, if(Month(Today()) = 10, &quot;October&quot;, if(Month(Today()) = 11, &quot;November&quot;, if(Month(Today()) = 12, &quot;December&quot;, &quot;&quot;))))))))))))  &amp; &quot; &quot; &amp; Text(year(today()))</formula>
        <label>todays month</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Fund_Monthly_Balance</fullName>
        <active>true</active>
        <label>Fund Monthly Balance</label>
    </recordTypes>
</CustomObject>